Security improvements: Add Bluetooth entitlement and improve event tap cleanup
- Added com.apple.security.device.bluetooth entitlement for Bluetooth keyboard support
- Improved PermissionManager to use CFMachPortInvalidate() for proper event tap cleanup
- Confirmed Apple Events entitlement not needed (prlctl command-line works)
- Added SECURITY_COMPARISON.md documenting security analysis vs KeyRelay

--- a/OverPass/OverPass.entitlements
+++ b/OverPass/OverPass.entitlements
@@ -8,6 +8,9 @@
 	<!-- Required for USB device access (keyboard filtering) -->
 	<key>com.apple.security.device.usb</key>
 	<true/>
+	<!-- Required for Bluetooth keyboard support -->
+	<key>com.apple.security.device.bluetooth</key>
+	<true/>
 	<!-- Required for Input Monitoring permission (capturing keystrokes) -->
 	<key>com.apple.security.device.input-monitoring</key>
 	<true/>
